--- a/aabi19.bib
+++ b/aabi19.bib
@@ -141,7 +141,7 @@ acceleration and interoperability with a wealth of existing software written in 
 }
 
 
-@InProceedings{vanderWilk19,
+@InProceedings{wilk19,
 	title = { Variational Gaussian Process Models
 without Matrix Inverses},
 	author = {van der Wilk, Mark and John, ST  and  Artemev, Artem and Hensman, James  },
@@ -163,8 +163,7 @@ Stochastic Differential Equations },
 	title = { Characterizing and Avoiding Problematic Global Optima of Variational Autoencoders},
 	author = { Yacoby,Yaniv  and   Pan, Weiwei and Doshi-Velez, Finale },
 	pages = { 1-17 },
-	abstract = { Variational Auto-encoders (VAEs) are deep generative latent variable models consisting of two components: a generative model that captures a data distribution p(x) by transforming a distribution p(z) over latent space, and an inference model that infers likely latent codes for each data point (Kingma and Welling, 2013). Recent work shows that traditional training methods tend to yield solutions that violate modeling desiderata: (1) the learned generative model captures the observed data distribution but does so while ignoring the latent codes, resulting in codes that do not represent the data (e.g. van den Oord et al. (2017); Kim et al. (2018)); (2) the aggregate of the learned latent codes does not match the prior p(z). This mismatch means that the learned generative model will be unable to generate realistic data with samples from p(z)(e.g. Makhzani et al. (2015); Tomczak and Welling (2017)). In this paper, we demonstrate that both issues stem from the fact that the global optima of the VAE training objective often correspond to undesirable solutions. Our analysis builds on two observations: (1) the generative model is unidentiable { there exist many generative models that explain the data equally well, each with dierent (and potentially unwanted) properties and (2) bias in the VAE objective { the VAE objective may prefer generative models that explain the data poorly but have posteriors that are easy to approximate. We present a novel inference method, LiBI, mitigating the problems identied in our analysis.
-On synthetic datasets, we show that LiBI can learn generative models that capture the data distribution and inference models that better satisfy modeling assumptions when traditional methods struggle to do so.}
+	abstract = { Variational Auto-encoders (VAEs) are deep generative latent variable models consisting of two components: a generative model that captures a data distribution p(x) by transforming a distribution p(z) over latent space, and an inference model that infers likely latent codes for each data point (Kingma and Welling, 2013). Recent work shows that traditional training methods tend to yield solutions that violate modeling desiderata: (1) the learned generative model captures the observed data distribution but does so while ignoring the latent codes, resulting in codes that do not represent the data (e.g. van den Oord et al. (2017); Kim et al. (2018)); (2) the aggregate of the learned latent codes does not match the prior p(z). This mismatch means that the learned generative model will be unable to generate realistic data with samples from p(z)(e.g. Makhzani et al. (2015); Tomczak and Welling (2017)). In this paper, we demonstrate that both issues stem from the fact that the global optima of the VAE training objective often correspond to undesirable solutions. Our analysis builds on two observations: (1) the generative model is unidentiable - there exist many generative models that explain the data equally well, each with dierent (and potentially unwanted) properties and (2) bias in the VAE objective - the VAE objective may prefer generative models that explain the data poorly but have posteriors that are easy to approximate. We present a novel inference method, LiBI, mitigating the problems identied in our analysis. On synthetic datasets, we show that LiBI can learn generative models that capture the data distribution and inference models that better satisfy modeling assumptions when traditional methods struggle to do so.}
 }
 
 @InProceedings{shwartzziv19,
@@ -185,7 +184,7 @@ On synthetic datasets, we show that LiBI can learn generative models that captur
 
 @InProceedings{perov19,
 	title = {MultiVerse: Causal Reasoning using Importance Sampling in Probabilistic Programming },
-	author = {Perov, Yura and  Graham, Logan and  Gourgoulias, Kostis and Richens, Jonathan and Lee, Ciarán and   Baker, Adam and Johri, Saurabh },
+	author = {Perov, Yura and  Graham, Logan and  Gourgoulias, Kostis and Richens, Jonathan and Lee, Ciaran and Baker, Adam and Johri, Saurabh },
 	pages = { 1-36 },
 	abstract = { We elaborate on using importance sampling for causal reasoning, in particular for counterfactual inference. We show how this can be implemented natively in probabilistic programming. By considering the structure of the counterfactual query, one can signicantly optimise the inference process. We also consider design choices to enable further optimisations. We introduce MultiVerse, a probabilistic programming prototype engine for approximate causal reasoning. We provide experimental results and compare with Pyro, an existing probabilistic programming framework with some of causal reasoning tools.}
 }
