--- a/_posts/2020-02-03-wilk20a.md
+++ b/_posts/2020-02-03-wilk20a.md
@@ -21,7 +21,8 @@ cycles: false
 bibtex_author: van der Wilk, Mark and John, ST and Artemev, Artem and Hensman, James
 author:
 - given: Mark
-  family: van der Wilk
+  prefix: van der
+  family: Wilk
 - given: ST
   family: John
 - given: Artem
